Overflow correction

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 body {
-    overflow: hidden;
+    
     padding: 0;
     margin: 0;
     background: #FFF;
